Version: 1.3.5
Date: 11/12/25
  Major Features:
    - Integrated locomotives into the trading nexus:
        Cargo wagons of trains at a train stop now serve as substitute inventories for the hex core in the same hex as the train stop.
        Upon arrival at a stop, if the associated hex core is set to allow trading with trains, the train's inventories will be used for trading.
  Changes:
    - Made the output buffer loading smarter, preventing from trading too many stacks of items at once.
        (e.g. buying cars with hexaprism coins doesn't put billions of cars into the output buffer that'll take an eternity to unload.)
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 10/12/25
  Bugfixes:
    - Fixed rare crash around the mod's GUIs. (again)
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 9/12/25
  Bugfixes:
    - Fixed rare crash around the mod's GUIs.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 9/12/25
  Major Features:
    - Added item buffs for lightning rods and lightning collectors.  This buff unlocks and enhances passive coin accumulation in player inventories based on current net coin generation rate through trading.
    - Added quest reward on Vulcanus which allows teleporting to hex cores on other planets as long as there are no items in your inventory (except your equipped armor and weapons).
  Features:
    - Added ability to favorite trades by clicking the trade arrow.  Favorited trades always show at the top of the trade overview list if they pass the filter as per usual.
  Minor Features:
    - Teleportation to hex cores now works while inside a spidertron or other vehicle, bringing the vehicle with you.
    - Added hotkeys for opening/closing the questbook, catalog, and trade overview.