@@ -5,6 +5,8 @@ Date: 11/12/25
     - Integrated locomotives into the trading nexus:
         Cargo wagons of trains at a train stop now serve as substitute inventories for the hex core in the same hex as the train stop.
         Upon arrival at a stop, if the associated hex core is set to allow trading with trains, the train's inventories will be used for trading.
+  Features:
+    - Placing a constant combinator adjacent to a hex core will put the item types and amounts of the "next" enabled trade into its constant signals.
   Changes:
     - Made the output buffer loading smarter, preventing from trading too many stacks of items at once.
         (e.g. buying cars with hexaprism coins doesn't put billions of cars into the output buffer that'll take an eternity to unload.)
